Fixed up details tags wth spacing Fixed table on pending page Increased width on check your answer tables

--- a/public/stylesheets/sdil.css
+++ b/public/stylesheets/sdil.css
@@ -13,7 +13,7 @@ body {
 }
 
 .table-row-question {
-    width: 50%;
+    width: 62%;
 }
 
 @media (min-width: 640px) {
@@ -87,4 +87,12 @@ html .font-xsmall {
 
 .check-your-answers td {
     vertical-align: top;
+}
+
+.padding-bottom-10 {
+    padding-bottom: 10px;
+}
+
+.margin-bottom-25 {
+    margin-bottom: 25px;
 }
